--- a/single_payment_platform_extension/manifest.json
+++ b/single_payment_platform_extension/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Single Payment Platform",
     "description": "Aggregate and orchestrate multiple checkouts into a single payment flow.",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "manifest_version": 3,
   
     "action": {
@@ -14,14 +14,6 @@
   
     "permissions": [
       "storage",
-      "tabs",
-      "scripting"
-    ],
-  
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
+      "tabs"
     ]
   }
