Added icons to manifest.json

--- a/single_payment_platform_extension/manifest.json
+++ b/single_payment_platform_extension/manifest.json
@@ -1,11 +1,17 @@
 {
     "name": "Single Payment Platform",
     "description": "Aggregate and orchestrate multiple checkouts into a single payment flow.",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "manifest_version": 3,
   
     "action": {
-      "default_popup": "popup.html"
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+      }
     },
   
     "background": {
